--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
   "name": "playhausnft-front",
+  "homepage": "https://scumbug.github.io/playhausnft-front",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/league-spartan": "^4.5.11",
+    "@fontsource/work-sans": "^4.5.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^4.0.0",
+    "primeicons": "^5.0.0",
+    "primereact": "^8.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
